# Easy-Crossplatform-Drive

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
client/: CMakeLists.txt  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  propdialog.ui  res.qrc  signupdialog.ui
client/model/: CMakeLists.txt  main.cpp  model.cpp  model.h
client/view/: CMakeLists.txt  logindialog.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  propdialog.cpp  propdialog.h  propdialog.ui  signupdialog.cpp  signupdialog.h  verificationdialog.cpp  verificationdialog.h  verificationdialog.ui
client/view_model/: CMakeLists.txt  filetree.cpp  filetree.h  main.cpp  viewmodel.h
common/: CMakeLists.txt  main.cpp
common/converter/: file_type_converter.h
common/domain/: file_type.h
common/dto/auth/: confirm_register_request.h  general_response.h  login_request.h  register_init_request.h  register_init_response.h
common/dto/auth_dto/: auth_response_dto.h  confirm_register_request_dto.h  login_request_dto.h  register_init_request_dto.h  register_init_response_dto.h
common/dto/file/: create_empty_request.h  create_empty_response.h  file_type.h  metadata_response.h  rename_request.h  rename_response.h  tree_response.h  upload_complete_response.h  upload_init_request.h  upload_init_response.h
common/dto/file_dto/: file_create_empty_request.h  file_create_empty_response.h  file_metadata_response_dto.h  file_rename_request_dto.h  file_rename_response_dto.h  file_tree_response_dto.h  file_type_enum.h  upload_complete_response_dto.h  upload_init_request_dto.h  upload_init_response_dto.h
common/dto/server_limits/: transfer.h
common/dto/server_limits_dto/: limits_transfer_dto.h
common/serialization/auth/: auth_json.cpp  auth_json.h  json.cpp  json.h
common/serialization/file/: json.cpp  json.h
common/serialization/server_limits/: json.cpp  json.h  server_limits_json.cpp  server_limits_json.h
server/: CMakeLists.txt  main.cpp
server/api_layer/: CMakeLists.txt  main.cpp
server/data_access_layer/: CMakeLists.txt  database_manager.cpp  database_manager.h  file.cpp  file.h  file_record.cpp  file_record.h  file_repository.cpp  file_repository.h  file_storage.cpp  file_storage.h  main.cpp  token.cpp  token.h  token_record.cpp  token_record.h  token_repository.cpp  token_repository.h  user.cpp  user.h  user_record.cpp  user_record.h  user_repository.cpp  user_repository.h
server/service_layer/: CMakeLists.txt  main.cpp  service_result.h
server/service_layer/auth/: auth_config.h  error_codes.h  models.h  service.cpp  service.h
server/service_layer/datetime/: time_provider_interface.h
server/service_layer/email/: email_sender.h
server/service_layer/file/: error_codes.h  file_config.h  models.h  service.cpp  service.h
server/service_layer/security/: password_hasher_interface.h  security_config.h  sodium_password_hasher.cpp  sodium_password_hasher.h
tests/: CMakeLists.txt  server_test.cpp
tests/server/: CMakeLists.txt
tests/server/data_access_layer/: CMakeLists.txt  file_storage_test.cpp  files_table_test.cpp  tokens_table_test.cpp  users_table_test.cpp
tests/server/service_layer/: CMakeLists.txt  auth_service_test.cpp  file_service_test.cpp  mock_time_provider.h
